--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.6",
+    "random-words": "^1.1.0",
     "request": "^2.88.0"
   }
 }
